# icpay-agent-marketplace

./: .gitignore  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
src/backend/: Cargo.toml  backend.did
src/backend/src/: csv_analyzer.rs  lib.rs  pdf.rs  text_summarizer.rs
src/frontend/: .env.production  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
src/frontend/public/: .ic-assets.json5
src/frontend/src/: App.tsx  config.ts  index.css
src/frontend/src/components/ui/: button.tsx
src/frontend/src/hooks/: usePaymentFlow.ts
src/frontend/src/pages/: AgentMarketplace.tsx  PaymentAgent.tsx
src/frontend/src/pages/agents/: CsvAnalyzerAgent.tsx  GitHubScorerAgent.tsx  PdfCompressorAgent.tsx  TextSummarizerAgent.tsx
src/frontend/src/services/: csvService.ts  githubScorerService.ts  icpayService.ts  jobService.ts  pdfService.ts  quoteService.ts  textSummarizerService.ts
src/frontend/src/types/: payment.ts  pdf.ts  quote.ts
