[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = "0.10.19"
ic-cdk = "0.17"
ic-llm = "1.1.0"
serde = { version = "1.0.9", features = ["derive"] } 
